; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/line6/extr_driver.c_line6_destruct.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/line6/extr_driver.c_line6_destruct.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.usb_interface = type { i32 }
%struct.usb_line6 = type { i32, %struct.usb_line6*, %struct.usb_line6* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.usb_interface*)* @line6_destruct to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @line6_destruct(%struct.usb_interface* %0) #0 {
  %2 = alloca %struct.usb_interface*, align 8
  %3 = alloca %struct.usb_line6*, align 8
  store %struct.usb_interface* %0, %struct.usb_interface** %2, align 8
  %4 = load %struct.usb_interface*, %struct.usb_interface** %2, align 8
  %5 = icmp eq %struct.usb_interface* %4, null
  br i1 %5, label %6, label %7

6:                                                ; preds = %1
  br label %30

7:                                                ; preds = %1
  %8 = load %struct.usb_interface*, %struct.usb_interface** %2, align 8
  %9 = call %struct.usb_line6* @usb_get_intfdata(%struct.usb_interface* %8)
  store %struct.usb_line6* %9, %struct.usb_line6** %3, align 8
  %10 = load %struct.usb_line6*, %struct.usb_line6** %3, align 8
  %11 = icmp eq %struct.usb_line6* %10, null
  br i1 %11, label %12, label %13

12:                                               ; preds = %7
  br label %30

13:                                               ; preds = %7
  %14 = load %struct.usb_line6*, %struct.usb_line6** %3, align 8
  %15 = getelementptr inbounds %struct.usb_line6, %struct.usb_line6* %14, i32 0, i32 2
  %16 = load %struct.usb_line6*, %struct.usb_line6** %15, align 8
  %17 = call i32 @kfree(%struct.usb_line6* %16)
  %18 = load %struct.usb_line6*, %struct.usb_line6** %3, align 8
  %19 = getelementptr inbounds %struct.usb_line6, %struct.usb_line6* %18, i32 0, i32 1
  %20 = load %struct.usb_line6*, %struct.usb_line6** %19, align 8
  %21 = call i32 @kfree(%struct.usb_line6* %20)
  %22 = load %struct.usb_line6*, %struct.usb_line6** %3, align 8
  %23 = getelementptr inbounds %struct.usb_line6, %struct.usb_line6* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 8
  %25 = call i32 @usb_free_urb(i32 %24)
  %26 = load %struct.usb_interface*, %struct.usb_interface** %2, align 8
  %27 = call i32 @usb_set_intfdata(%struct.usb_interface* %26, i32* null)
  %28 = load %struct.usb_line6*, %struct.usb_line6** %3, align 8
  %29 = call i32 @kfree(%struct.usb_line6* %28)
  br label %30

30:                                               ; preds = %13, %12, %6
  ret void
}

declare dso_local %struct.usb_line6* @usb_get_intfdata(%struct.usb_interface*) #1

declare dso_local i32 @kfree(%struct.usb_line6*) #1

declare dso_local i32 @usb_free_urb(i32) #1

declare dso_local i32 @usb_set_intfdata(%struct.usb_interface*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
